excludeCredentials設定
